2003-09-25  Michael Banck  <mbanck@gmx.net>
 
        * src/mol.h (_internals): New protected class attribute.
	(GetInternalCoord): New declaration.
        (SetInternalCoord): New method.
	(BeginInternalCoord): New method for iterating over _internals.
	(NextInternalCoord): Likewise.

        * src/mol.cpp (GetInternalCoord): New method.

2003-09-21  Peter Murray-Rust <pm286@cam.ac.uk>

	* src/cml.cpp: removed inconsistences between atomRef, atomRef1,
    	atomRef2, and atomRefs2 attributes.
    	* test/cmltest/cs2a.cml: changed atomRefs1 and atomRefs2 attributes 
        to atomRef
    	* test/cmltest/test.bat: minor edits to allow echo
    
2003-09-14  Michael Banck <mbanck@gmx.net>

	* src/povray.cpp: Removed getlogin() declaration.
	(OutputHeader): Removed log_name, don't output login name in
	Povray header.

2003-09-13  Michael Banck <mbanck@gmx.net>

	* src/chemtool.cpp: New file.
	* src/Makefile.am (libopenbabel_la_SOURCES): Added chemtool.cpp.
	* src/Makefile.in: Regenerated.
	* src/data.cpp (TextToType): Added CHEMTOOL typestring.
	* src/data.h (io_type): Added CHEMTOOL.
	* src/extable.txt: Added Chemtool writing support.
	* src/fileformat.cpp (OBFileFormat::WriteMolecule): Added
	WriteCHT function call for CHEMTOOL io_type.
	* src/fileformat.h (OBFileFormat): Added WriteCHT() method.

2003-07-02  Geoffrey Hutchison  <hutchisn@chem.northwestern.edu>

	* src/data.cpp (GetAtomicNum): Fix mistake in calls to strcasecmp,
	as pointed out by Chris Morley.

	* src/math/Makefile.am: Make sure math/matrix3x3.h and
	math/vector3.h are installed with a "make install" as reported by
	Jean. Fixes PR#761644.

	* Makefile.in, src/math/Makefile.in: Regenerate using automake.

2003-06-26  Michael Banck <mbanck@gmx.net>

	* NEWS: New file.

2003-06-23  Geoffrey Hutchison  <hutchisn@chem.northwestern.edu>

	* src/main.cpp: Move man documentation to end of file (right
	after usage() code) for better "readability". Also make sure that